2017-06-16
- [feature] 添加信任服务器配置,缩短整合输出时的地址

2017-06-19
- [fixbug] 修正添加信任服务器后未能正确排除请求重复资源的 bug

2017-06-24
- [feature] 添加图片整合接口 css sprite
- [feature] 配置文件添加 site.base 项